--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </p>
         <div>
             <a href="#page-3" class="btn">
-                Prev Page <i class="fas fa-arrow-alt-circle-down"></i>
+                Prev Page <i class="fas fa-arrow-alt-circle-up"></i>
             </a>
         </div>
     </section>
