--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+
     <title>Presentation</title>
 </head>
 
@@ -20,7 +21,7 @@
         </p>
         <div>
             <a href="#page-2" class="btn">
-                Next Page <i class="fas fa-arrow-alt-circle-down"></i>
+                Next Page <i class="fas fa-arrow-circle-down"></i>
             </a>
         </div>
     </section>
@@ -33,10 +34,10 @@
         </p>
         <div>
             <a href="#page-1" class="btn btn-dark">
-                Prev Page <i class="fas fa-arrow-alt-circle-up"></i>
+                Prev Page <i class="fas fa-arrow-circle-up"></i>
             </a>
             <a href="#page-3" class="btn">
-                Next Page <i class="fas fa-arrow-alt-circle-down"></i>
+                Next Page <i class="fas fa-arrow-circle-down"></i>
             </a>
         </div>
     </section>
@@ -49,10 +50,10 @@
         </p>
         <div>
             <a href="#page-2" class="btn btn-dark">
-                Prev Page <i class="fas fa-arrow-alt-circle-up"></i>
+                Prev Page <i class="fas fa-arrow-circle-up"></i>
             </a>
             <a href="#page-4" class="btn">
-                Next Page <i class="fas fa-arrow-alt-circle-down"></i>
+                Next Page <i class="fas fa-arrow-circle-down"></i>
             </a>
         </div>
     </section>
@@ -65,7 +66,7 @@
         </p>
         <div>
             <a href="#page-3" class="btn">
-                Prev Page <i class="fas fa-arrow-alt-circle-up"></i>
+                Prev Page <i class="fas fa-arrow-circle-up"></i>
             </a>
         </div>
     </section>
